--- a/styles/less/_checkout.less
+++ b/styles/less/_checkout.less
@@ -111,6 +111,7 @@
   -webkit-transition: 0.2s linear;
   -o-transition: 0.2s linear;
   transition: 0.2s linear;
+  cursor: pointer;
   &:hover {
     color: white;
     background-color: @mainColor;
