--- a/styles/less/_header-menu.less
+++ b/styles/less/_header-menu.less
@@ -217,6 +217,7 @@
   position: absolute;
   top: 78px;
   display: none;
+  z-index: 1000;
   -webkit-box-shadow: -6px 7px 16px -4px rgba(77,77,77,1);
   -moz-box-shadow: -6px 7px 16px -4px rgba(77,77,77,1);
   box-shadow: -6px 7px 16px -4px rgba(77,77,77,1);
