--- a/styles/less/_product.less
+++ b/styles/less/_product.less
@@ -55,6 +55,13 @@
   }
 }
 
+.catError {
+  color: @mainColor;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+}
+
 .choose-list {
   width: 200px;
 }
